tests/invalid/entry_method_not_top_level.wio
object Runner {
    fn Entry() -> i32 {
        return 0;
    }
}

fn Entry() -> i32 {
    return 0;
}
